format remaining pages for jekyll, add timeline content
Former-commit-id: 5b3996293885f8a3074bf6929157ab46dbb69daa [formerly bfea2d7b163a0d495f21059581cdd1858934ffa8]
Former-commit-id: 158105df4c128191248bd1dcccdf266e2c6458ef

--- a/learn.html
+++ b/learn.html
@@ -1,6 +1,6 @@
 ---
 layout: learnpage
-title: Moonwards Virtual Moon Colony Project
+title: Learn Moon Settlement Science and Math
 stylesheet: "css/learn.nest.sass.css"
 description: "A realistic virtual lunar colony, showing how space
 settlement will affect our future. The technology and science of living
@@ -23,7 +23,7 @@ of the Moon."
 	</div>
 </header>
 <div class="container">
-	<section id="interactives">
+	<section id="tryit">
 		<div class="outerDiv">
 			<div class="innerDiv">
 				<h2>Suborbital Hop</h2>
