--- a/machines2.html
+++ b/machines2.html
@@ -1,10 +1,10 @@
 ---
 layout: content
 title: Lunar Machines for Power, Mining, and Transport
-description: Machines designed for a Moon base. Solar thermal power plants, nuclear reactors, mining and ore processing, nuclear shuttles and orbital tether transport, suitable for the abrasive lunar dust, hard vacuum, large temperature swings, and high radiation working environment.
-headline: Machines for a Lunar Economy
-intro: These sections focus on the machines that come to the fore once you've built the first permanent habs. To make it all work you have to scale up as quickly as possible so you have products you can sell, and lower your costs as much as possible by using local resources to the maximum. These machines achieve that.
+description: "Machines designed for a Moon base. Solar thermal power plants, nuclear reactors, mining and ore processing, nuclear shuttles and orbital tether transport, suitable for the abrasive lunar dust, hard vacuum, large temperature swings, and high radiation working environment."
+headline: "Machines for a Lunar Economy"
+intro: "These sections focus on the machines that come to the fore once you've built the first permanent habs. To make it all work you have to scale up as quickly as possible so you have products you can sell, and lower your costs as much as possible by using local resources to the maximum. These machines achieve that."
 ---
 {% include machinesPower.html %}
-{% include machinesExtraction.html %}
+{% include machinesMining.html %}
 {% include machinesTransport.html %}
