--- a/timeline.html
+++ b/timeline.html
@@ -6,22 +6,67 @@ headline: The Path to a Lunar Society
 intro: What matters is understanding what <i>needs</i> to happen, and what <i>can</i> happen. The dates aren't important. Nothing determines the dates more than the priority the people of the space-faring nations place on this goal. This page explains the best conceivable path if the will is there and the politics of conflict is set aside. If we were really aware of what amazing things we could achieve if only we worked together, perhaps we would find the will to do so. Take what follows as an illustration of what that could be.
 ---
 
-<div class="columnSet underHeader">
- <section class="column">
-  <h1>Transport System</h1>
+<details style="margin-top: 3rem; margin-left: 5%;">
+<summary>Ongoing process item</summary>
+This is a part of the site that is expanded and detailed as the project develops. It will change and grow regularly.
+</details>
+<div class="columnSet">
+ <article class="column">
+  <h1>Transport Systems</h1>
   <details>
-   <summary>Everything depends on it</summary>
-   Europeans colonized the world thanks to their great sailing ships. Railroads were vital to expansion across the North American continent. Almost any level of investment is justfied if it secures you access long-term to a large enough place. When that new place is the rest of the solar system? Bet the bank on it.<br><br>
-   The difference between reliance on chemical rockets and reliance on the system below is like the difference between wagon trains and steam locomotives. Railroads completely changed what was possible, this is the same thing. .
+  <summary>The key to success</summary>
+   <p>
+    Europeans colonized the world thanks to their great sailing ships. Railroads were vital to expansion across the North American continent. Almost any level of investment is justfied if it secures you access long-term to a large enough place. When that new place is the rest of the solar system? Bet the bank on it.
+    The difference between reliance on chemical rockets and reliance on the system below is like the difference between wagon trains and steam locomotives. Railroads completely changed what was possible, this is the same thing.
+   </p>
+   <p>The cost of transport is currently a high percentage of the total cost of space missions. Total loss of missions due to launch failure, engine failure in space, or landing failure is frequent. Long delays due to the time it takes to prepare and launch rockets slows everything down. Any serious undertaking in space needs to address these issues before it does anything else. The road to profitability can be made much shorter thanks to proper design here.
+   </p>
   </details>
- </section>
- <section class="column">
+ </article>
+ <article class="column">
   <h1>Colony Development</h1>
   <details>
-   <summary>Robotics and Scale</summary>
+   <summary>Go big, go robotic</summary>
+   <p>
+    Our position is it doesn't make sense to undertake construction or any industrial process on the Moon unless it can be done by robots that are operated remotely. Also, once a base is being built of lunar materials, it should be as big as possible. Most things should be made as large as they reasonably can be, until transport between Earth and the Moon has become routine and the colonies are very well established. Redundancy and extra capacity tend to come in handy at an outpost. The kind of businesses the colony will pursue first also tend to benefit from economies of scale - real estate, heavy machinery manufacture, facilities for tourism, sports, and broadcasting.
+   </p>
   </details>
- </section>
- <section class="column">
+ </article>
+ <article class="column">
   <h1>Socio-Economic Development</h1>
- </section>
+  <details>
+   <summary>A bridge to a new era</summary>
+   <p>Everything here is predicated on the idea that a group of nations decide together to colonize the Moon and devote the funds necessary to do so properly without question. So, let the model be that the first missions are funded and carried out jointly by the nations with well-established space agencies - the United States, Russia, the European Union, China, India, Japan, and Canada. Once the Residence Program (explained below) begins, all nations participate.
+   </p>
+  </details>
+ </article>
+</div>
+<div class="columnSet">
+ <article class="column">
+  <h5><a href="machines2.html#ionDrive">Ion Drive Cargo Ship</a></h5>
+  <ul>
+   <li>This will require on-orbit assembly.
+    <ul>
+    <li>The assistance of the ISS or its successor is therefore vital.</li>
+    <li>It will thus be able to ignore the restrictions of rocket fairings, unlike previous space ships. The finished ship will look like a giant wine rack with motors and solar panels tacked onto it.</li>
+    </ul>
+   </li>
+   <li>It has a set of spaces where cargo pods can be slid in and locked into place, similar to shipping container systems.</li>
+   <li>Ongoing support from a space station is also needed, as a staging area where cargo pods can be sent, wait for the return of the cargo ship, and be loaded onto it by robotic arms and the station crew. This also means the cargo ship can receive maintenance and repairs, and be upgraded with more engines and cargo space.</li>
+   <li>It is an uncrewed ship, as it takes far too long to move between Earth and the Moon to be safe or practical for people.</li>
+  </ul>
+  <h5><a href="machines2.html#nuclearShuttles">Nuclear Thermal Shuttles</a></h5>
+  <ul>
+   <li>Flies between the lunar surface and lunar orbit</li>
+   <li>May be practical to connect its engines to turbine generators when not flying</li>
+   <li>Uses an <a href="http://www.projectrho.com/public_html/rocket/enginelist.php#lantr">oxygen 'afterburner'</a> to increase thrust during launch and landing</li>
+   <li>A barrier needs to be between the shuttle and human habs so that people aren't exposed to its radiation when working outside</li>
+   <li>To design the model, better data is needed on radiation shield design. </li>
+  </ul>
+ </article>
+ <article class="column">
+  <h5><a href="machines.html#robots">Robot and Rover Test Missions</a></h5>
+ </article>
+  <article class="column">
+ </article>
 </div>
