fix 3d model iframe layout
Former-commit-id: d45374ccb646bf1a35af6df9ab846079601fefcd [formerly 56b467973053525e99df5da8a127fb68744ab186]
Former-commit-id: 8963d472f905a85d48b8f031e07bfea6320f83d9

--- a/lalande.html
+++ b/lalande.html
@@ -210,16 +210,17 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
       </p>
 					</figure>
 				</div>
-  <figure class="framewrap frame16x9">
-						<iframe src="modelProxy0.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
-						</iframe>
-		</figure>
 			</div>
 		</div>
 	</section>
 </div>
+<div class="container_SF_iframe" id="CraterModel">
 
-
+  <figure class="framewrap frame16x9">
+						<iframe src="modelProxy24.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						</iframe>
+		</figure>
+</div>
 </body>
 
 </html>
