--- a/timeline.html
+++ b/timeline.html
@@ -66,6 +66,20 @@ This is a part of the site that is expanded and detailed as the project develops
  </article>
  <article class="column">
   <h5><a href="machines.html#robots">Robot and Rover Test Missions</a></h5>
+  <ul>
+   <li>After the cargo ship has deployed the nuclear shuttle, and the two have taken the first deliveries of equipment and supplies to the base site on the rim of Peary crater, a crew is delivered to orbit by a conventional rocket. Their capsule is picked up by the nuclear shuttle and landed at the base site.
+  </li>
+  <li>Remotely operated equipment has already excavated a trench, placed an inflatable hab for the crew in it, and covered it over with enough regolith to form a good radiation barrier. If there were problems with this process, the human crew completes it. Other simple processes such as basic scouting and solar panel setup were done.
+  </li>
+  <li>The crew spends a few weeks on site:
+   <ul>
+    <li>Surveying the locale, doing experiments on the soil and samples from the permanently shadowed craters</li>
+    <li>Testing the prototype robots that will be used for more complex remote work after the crew leaves, and setting up initial infrastructure for them, such as rails they move on, bases for arms, stations for basic repairs and installaation of drop-in replacement parts.</li>
+    <li>Assisting the remote operation equipment in the initial micro-charge excavation for the first constructed hab, and the initial testing of fabrication of building materials from melted regolith</li>
+    <li>After the crew leave, a further series of missions uses that infrastructure so improved robots can be tested and do work.</li>
+   </ul>
+  <li>One or two additional crew expeditions may be sent as needed to help the robots build the first permanent hab, or do the initial small-scale collection and processing of ices from the permanent shadows. The emphasis is very much on the creation of equipment that can do that work without people on site, and completion of the first permanent hab.</li>
+  
  </article>
   <article class="column">
  </article>
