add content to timeline
Former-commit-id: a5f62d9efb0a00fbd01aa063f779f7c57b33bbee [formerly 59d74765dd2895fb78528b2ccc2ed17b86ec3c0d]
Former-commit-id: fe094741e5e0cb82ad6dc90b25ed9f56a9c3a49c

--- a/lalande.html
+++ b/lalande.html
@@ -214,13 +214,17 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
 		</div>
 	</section>
 </div>
-<div class="container_SF_iframe" id="CraterModel">
-
+<section class="frameContainer" id="CraterModel">
+ <div class="framePairTop">
   <figure class="framewrap frame16x9">
 						<iframe src="modelProxy24.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
 		</figure>
-</div>
+ </div>
+ <div class="framePairBottom">
+  This model of Lalande is based on LOLA topographical data, the oblique photos taken by Apollo 16, and the above image made from the LRO data, which is laid overtop. Detail will be added to it over time, so that it forms the basis of the landscape of the virtual colonies. The photographic texture will be replaced with algorithmic textures that are a good representation of the lunar surface. The largest boulders will be modeled and placed in the on the model of the ground.
+ </div>
+</section>
 </body>
 
 </html>
