--- a/timeline.html
+++ b/timeline.html
@@ -43,17 +43,24 @@ This is a part of the site that is expanded and detailed as the project develops
 </div>
 <div class="columnSet">
  <article class="column">
-  <h5><a href="machines2.html#ionDrive">Ion Drive Cargo Ship</a></h5>
+  <h5><a href="machines2.html#AsteroidAnchors">First Asteroid Retrieval Mission</a></h5>
+  <ul>
+   <li>Based on the <a href="http://sites.nationalacademies.org/cs/groups/depssite/documents/webpage/deps_083266.pdf">ARM</a> mission design scaled by a factor of 10, aiming for an asteroid massing 7.5 metric kilotons</li>
+   <li>This needs to launch first so it can get the asteroid to lunar orbit by the time the infrastructure to do something with it is ready.</li>
+   <li>This asteroid will be the anchor for the first tether from lunar orbit to the lunar surface. Want a good reason to conduct the ARM mission? This is it.
+  </ul>
+ <h5><a href="machines2.html#ionDrive">Ion Drive Cargo Ship</a></h5>
   <ul>
    <li>This will require on-orbit assembly.
     <ul>
     <li>The assistance of the ISS or its successor is therefore vital.</li>
-    <li>It will thus be able to ignore the restrictions of rocket fairings, unlike previous space ships. The finished ship will look like a giant wine rack with motors and solar panels tacked onto it.</li>
+    <li>It will thus be able to ignore the restrictions of rocket fairings, unlike previous space ships. The finished ship will look like a giant wine rack with  solar panel wings.</li>
     </ul>
    </li>
    <li>It has a set of spaces where cargo pods can be slid in and locked into place, similar to shipping container systems.</li>
    <li>Ongoing support from a space station is also needed, as a staging area where cargo pods can be sent, wait for the return of the cargo ship, and be loaded onto it by robotic arms and the station crew. This also means the cargo ship can receive maintenance and repairs, and be upgraded with more engines and cargo space.</li>
    <li>It is an uncrewed ship, as it takes far too long to move between Earth and the Moon to be safe or practical for people.</li>
+   <li>To work well its solar panels need to generate roughly 1 MW of power, and it needs an array of <a href="https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20040139476.pdf">HiPEP ion drives</a>. The ISS panels generate about 100 KW, so 10 times that much. One might hope to get 15 N of thrust from such a system. </li>
   </ul>
   <h5><a href="machines2.html#nuclearShuttles">Nuclear Thermal Shuttles</a></h5>
   <ul>
@@ -63,13 +70,15 @@ This is a part of the site that is expanded and detailed as the project develops
    <li>A barrier needs to be between the shuttle and human habs so that people aren't exposed to its radiation when working outside</li>
    <li>To design the model, better data is needed on radiation shield design. </li>
   </ul>
+
  </article>
  <article class="column">
   <h5><a href="machines.html#robots">Robot and Rover Test Missions</a></h5>
+<p>These can't start until the cargo ship and shuttle are running and have delivered their first payload to the site of the future base. The goal would be to have robotic machinery on the surface capable of performing the complex work of construction and volatile extraction by the time the asteroid for the first tether arrives in orbit.</p>
   <ul>
    <li>After the cargo ship has deployed the nuclear shuttle, and the two have taken the first deliveries of equipment and supplies to the base site on the rim of Peary crater, a crew is delivered to orbit by a conventional rocket. Their capsule is picked up by the nuclear shuttle and landed at the base site.
   </li>
-  <li>Remotely operated equipment has already excavated a trench, placed an inflatable hab for the crew in it, and covered it over with enough regolith to form a good radiation barrier. If there were problems with this process, the human crew completes it. Other simple processes such as basic scouting and solar panel setup were done.
+  <li>Remotely operated equipment has already excavated a trench, placed an inflatable hab for the crew in it, and covered it over with enough regolith to form a good radiation barrier. If there were problems with this process, the human crew completes it. Other simple processes such as basic scouting and solar panel setup are done.
   </li>
   <li>The crew spends a few weeks on site:
    <ul>
@@ -78,9 +87,16 @@ This is a part of the site that is expanded and detailed as the project develops
     <li>Assisting the remote operation equipment in the initial micro-charge excavation for the first constructed hab, and the initial testing of fabrication of building materials from melted regolith</li>
     <li>After the crew leave, a further series of missions uses that infrastructure so improved robots can be tested and do work.</li>
    </ul>
-  <li>One or two additional crew expeditions may be sent as needed to help the robots build the first permanent hab, or do the initial small-scale collection and processing of ices from the permanent shadows. The emphasis is very much on the creation of equipment that can do that work without people on site, and completion of the first permanent hab.</li>
-  
+  </li>
+  <li>One or two additional crew expeditions may be sent if needed to complete the design and testing of the robotic equipment. The robots must be capable of doing all the complex tasks of construction, excavation, extraction of volatile ices, and miscellaneous duties, by remote operation from Earth. The emphasis is very much on the creation of equipment that can do that work without people on site. Further missions to that end would also be of relatively short duration, on the order of a few weeks.</li>
+  </ul>
  </article>
-  <article class="column">
+ <article class="column">
+  <h5>Creation of an international space agency body</h5>
+  <p>The agencies of most of the major space-faring nations cooperated in the construction of the International Space Station: ESA, JAXA, Roscosmos, NASA, and CSA. This is the best precedent but is a minor collaboration compared to what would be involved in settling the Moon.</p>
+  <p>Many questions of jurisdiction, ownership, information sharing, and legal responsibility would need to be settled. Again the agreements covering the ISS are the model that would need to be built on.</p>
+  <p>A shift to an open-source model regarding the technology developed for the project could reduce tensions on several of those issues. The application of international law might help in questions of  administration.</p>
+  <p>As the project would be underway for a number of years before it involved a permanent human settlement, and a number of years more before there was profit, the scale of cooperation needed to continue working together would only slowly need to grow, and be tested many times before issues of serious consequence needed to be settled.</p>
+  <p>For this reason, such an endeavor provides the ideal way to develop the broad international collaboration needed to address long-term peace and prosperity on Earth.</p>
  </article>
 </div>
