adjusted content on ion drives
Former-commit-id: db1cc5891027eccfff6105d9e4a584fcb9941ce0 [formerly 1525d534cab6d12245449c4b6e639cb2cb95850f]
Former-commit-id: 84e0b5057314d9cd9d2463112b37e09ce0f08642

--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@ of the Moon."
 						models being added, animated, and supplemented with other media.
 						When the first, simple version of the virtual colony comes online, then we are
 						really rolling. If you are
-						inclined to take part, please contact me, comment in one of the sections
-						provided, or use the other contact
-						options shown on the <a href="project.html">Project</a> page.
+						inclined to take part, please use the contact
+						options shown on the <a href="project.html">Project</a> page, or email me.
 					</p>
 					<p class="byline">
 					Jan. 11, 2017 by Kim -- kim@moonwards.com
