--- a/lalande.html
+++ b/lalande.html
@@ -107,7 +107,7 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
 							</figcaption>
 							<p>
 								Outside the lip of the crater is in darkness. About 100 to 200 m inside the lip there is a wavy dividing line where the wall gets steeper, you can tell because its west side is brighter where material has slumped downwards and there are even several landslides.
-								The area between that dividing line and the crater lip is the flattened rim area visible in the first of this set of images. That division exists around the majority of the east and northeast walls. It must correspond to a change in density, meaning
+								The area between that dividing line and the crater lip is the flattened rim area visible in the third image above. That division exists around the majority of the east and northeast walls. It must correspond to a change in density, meaning
 								a change in composition or an increase in large fragments. Taken together, the photos indicate this division is about 50 or 60 m below the surface outside the rim.
 							</p>
 							<p>
@@ -222,7 +222,7 @@ is no place else in the solar system (beyond Earth) that has a fan page like thi
 		</figure>
  </div>
  <div class="framePairBottom">
-  This model of Lalande is based on LOLA topographical data, the oblique photos taken by Apollo 16, and the above image made from the LRO data, which is laid overtop. Detail will be added to it over time, so that it forms the basis of the landscape of the virtual colonies. The photographic texture will be replaced with algorithmic textures that are a good representation of the lunar surface. The largest boulders will be modeled and placed in the on the model of the ground.
+  This model of Lalande is based on LOLA topographical data, the oblique photos taken by Apollo 16, and the above image made from the LRO data, which is laid overtop. Detail will be added to it over time, and it will form the basis of the landscape of the virtual colonies. The photographic texture will be replaced with algorithmic textures that are a good representation of the lunar surface. The largest boulders will be modeled and placed on the model of the ground.
  </div>
 </section>
 </body>
