--- a/timeline.html
+++ b/timeline.html
@@ -47,21 +47,15 @@ This is a part of the site that is expanded and detailed as the project develops
   <ul>
    <li>Based on the <a href="http://sites.nationalacademies.org/cs/groups/depssite/documents/webpage/deps_083266.pdf">ARM</a> mission design scaled by a factor of 10, aiming for an asteroid massing 7.5 metric kilotons</li>
    <li>This needs to launch first so it can get the asteroid to lunar orbit by the time the infrastructure to do something with it is ready.</li>
-   <li>This asteroid will be the anchor for the first tether from lunar orbit to the lunar surface. Want a good reason to conduct the ARM mission? This is it.
+   <li>This asteroid will be the anchor for the first tether from lunar orbit to the lunar surface. Want a good reason to conduct the ARM mission? This is it.</li>
   </ul>
- <h5><a href="machines2.html#ionDrive">Ion Drive Cargo Ship</a></h5>
+ <h5><a href="machines2.html#ionDrive">Ion Drive Asteroid Retrieval Ship</a></h5>
   <ul>
-   <li>This will require on-orbit assembly.
-    <ul>
-    <li>The assistance of the ISS or its successor is therefore vital.</li>
-    <li>It will thus be able to ignore the restrictions of rocket fairings, unlike previous space ships. The finished ship will look like a giant wine rack with  solar panel wings.</li>
-    </ul>
+   <li>This will require on-orbit assembly due to the size of the solar panels and the scale of the bag that will enclose the asteroid. It can probably be done in 2 pieces.
    </li>
-   <li>It has a set of spaces where cargo pods can be slid in and locked into place, similar to shipping container systems.</li>
-   <li>Ongoing support from a space station is also needed, as a staging area where cargo pods can be sent, wait for the return of the cargo ship, and be loaded onto it by robotic arms and the station crew. This also means the cargo ship can receive maintenance and repairs, and be upgraded with more engines and cargo space.</li>
-   <li>It is an uncrewed ship, as it takes far too long to move between Earth and the Moon to be safe or practical for people.</li>
-   <li>To work well its solar panels need to generate roughly 1 MW of power, and it needs an array of <a href="https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20040139476.pdf">HiPEP ion drives</a>. The ISS panels generate about 100 KW, so 10 times that much. One might hope to get 15 N of thrust from such a system. </li>
-  </ul>
+   <li>To work well its solar panels need to generate roughly 1 MW of power, and it needs an array of <a href="https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20040139476.pdf">HiPEP ion drives</a>, The ISS panels generate about 100 KW, so 10 times that much. One might hope to get 15 N of thrust from such a system. </li>
+   <li>The ship is reused to retrieve a series of asteroids over time. It may need some refurbishment but should be able to get the 5 asteroids for the complete lunar tether system, and then a bunch of asteroids for mining.</li>
+ </ul>
   <h5><a href="machines2.html#nuclearShuttles">Nuclear Thermal Shuttles</a></h5>
   <ul>
    <li>Flies between the lunar surface and lunar orbit</li>
@@ -70,6 +64,12 @@ This is a part of the site that is expanded and detailed as the project develops
    <li>A barrier needs to be between the shuttle and human habs so that people aren't exposed to its radiation when working outside</li>
    <li>To design the model, better data is needed on radiation shield design. </li>
   </ul>
+ <h5><a href="machines2.html#CargoShip">Cargo Ship from LEO to LLO</a></h5>
+ <ul>
+  <li>uses next generation hydrolox upper stages capable of many restarts</li>
+  <li>On the LEO end, it meets a space station, loads the cargo waiting there and gets servicing</li>
+  <li>On the LLO end, it hands off its load to the nuclear shuttle</li>
+
 
  </article>
  <article class="column">
