add timeline content
Former-commit-id: 69704af78aba359bfef72b6613ca0fa4aef8f8ec [formerly 80335e9ca3997f159df68f5a7a93a942e6b9f73f]
Former-commit-id: 2e674ae6539f300962391ea223c1675966ec902e

--- a/timeline.html
+++ b/timeline.html
@@ -69,8 +69,8 @@ This is a part of the site that is expanded and detailed as the project develops
   <li>uses next generation hydrolox upper stages capable of many restarts</li>
   <li>On the LEO end, it meets a space station, loads the cargo waiting there and gets servicing</li>
   <li>On the LLO end, it hands off its load to the nuclear shuttle</li>
-
-
+  </ul>
+  <p><b>10 to 15 missions occur during this phase. The cargo ship takes payloads of up to 40 tons, the nuclear shuttle can land up to 12 tons on the surface.</b></p>
  </article>
  <article class="column">
   <h5><a href="machines.html#robots">Robot and Rover Test Missions</a></h5>
@@ -78,7 +78,8 @@ This is a part of the site that is expanded and detailed as the project develops
   <ul>
    <li>After the cargo ship has deployed the nuclear shuttle, and the two have taken the first deliveries of equipment and supplies to the base site on the rim of Peary crater, a crew is delivered to orbit by a conventional rocket. Their capsule is picked up by the nuclear shuttle and landed at the base site.
   </li>
-  <li>Remotely operated equipment has already excavated a trench, placed an inflatable hab for the crew in it, and covered it over with enough regolith to form a good radiation barrier. If there were problems with this process, the human crew completes it. Other simple processes such as basic scouting and solar panel setup are done.
+  <li>Remotely operated equipment has already excavated a trench, placed an inflatable hab for the crew in it, and covered it over with enough regolith to form a good radiation barrier. If there were problems with this process, the human crew completes it. Other simple processes such as basic scouting and solar panel setup are done. </li>
+  <li>Also the surface regolith is fused using simple Fresnel lenses. The thin layer created will tend to break up and shift, but by driving a grid of fused regolith stakes into the ground before passing the lens over an area, the melted surface fuses with the stakes into one piece. The cracking then doesn't lead to shifting. Thickening the fused layer by spreading more regolith overtop and heating it can also be done.
   </li>
   <li>The crew spends a few weeks on site:
    <ul>
@@ -89,6 +90,10 @@ This is a part of the site that is expanded and detailed as the project develops
    </ul>
   </li>
   <li>One or two additional crew expeditions may be sent if needed to complete the design and testing of the robotic equipment. The robots must be capable of doing all the complex tasks of construction, excavation, extraction of volatile ices, and miscellaneous duties, by remote operation from Earth. The emphasis is very much on the creation of equipment that can do that work without people on site. Further missions to that end would also be of relatively short duration, on the order of a few weeks.</li>
+  <li>Note that construction relies principally on the use of melted regolith construction materials, joined using more melted regolith. It does not require precision or complex tools. It does require simple tools that can handle temperatures in the range of 1200 to 1400 &deg;C, and robot limbs that can withstand the occasional splash or drip. The <a href="machines.html#MIPstation">MIP stations</a> are deployed from the very beginning and are very simple systems, they are the key to the feasibility of this.
+  </li>
+  <li>Note also that excavation is done in two steps that are simple and very effective. First, by boring a grid of holes using a sun gun, a piece whose model in in process right now. It is based very closely on the work of <a href="http://www.psicorp.com/pdf/library/VG09-193.pdf">Nakamura and Smith</a> through Physical Sciences Inc. Second, by laying micro-charges in those holes and detonating them to <a href="https://books.google.com.mx/books?id=rOg6B38bunIC&pg=PA235&lpg=PA235&dq=explosives+regolith&source=bl&ots=0YL6xrfyup&sig=d_DOCyBJTkkGCfuNIe4VsSQ0esY&hl=en&sa=X&ved=0ahUKEwjhl-nZkazSAhUGllQKHRoDDUgQ6AEIIDAB#v=onepage&q=explosives%20regolith&f=false">loosen the soil</a>. Further depth is achieved by repeating this process.
+  </li>
   </ul>
  </article>
  <article class="column">
@@ -98,5 +103,50 @@ This is a part of the site that is expanded and detailed as the project develops
   <p>A shift to an open-source model regarding the technology developed for the project could reduce tensions on several of those issues. The application of international law might help in questions of  administration.</p>
   <p>As the project would be underway for a number of years before it involved a permanent human settlement, and a number of years more before there was profit, the scale of cooperation needed to continue working together would only slowly need to grow, and be tested many times before issues of serious consequence needed to be settled.</p>
   <p>For this reason, such an endeavor provides the ideal way to develop the broad international collaboration needed to address long-term peace and prosperity on Earth.</p>
+ </article>
+</div>
+<div class="columnSet">
+ <article class="column">
+  <h5><a href="machines2.html#TetherTransport">Vertical Tether Construction in Polar Orbit</a></h5>
+  <ul>
+   <li>An asteroid massing 7500 tons is brought into high polar orbit, 5000 km above the surface. Surveys of Near Earth Asteroids will be much more complete by then, so it is reasonable to expect a carbonaceous asteroid that is suitable will have been found and collected. Its content of carbon and metal would be its most valuable contribution, as water is being mined from the lunar pole at less expense. But its hydrated minerals are still of value.</li>
+   <li>Zylon cables, construction equipment, and a test cable car are brought from Earth to the asteroid. Some small scale tests will already have been done in preparation. Now further testing and experimentation is done to ensure a robust design.</li>
+   <li>A tether begins to be extended from the asteroid towards the surface. The first increment is only a few kilometers, then increments of a hundred kilometers are added. The platform at the foot, the procedure by which the nuclear shuttle meets it and is grappled, oscillation control on the tether, the cable car, and cable car propulsion are all thoroughly tested at this scale and further refined.</li>
+   <li>The tether is extended in increments of 1000 km until it reaches an altitude of 100 km above the surface. The lower tether is then complete.</li>
+   <li>The cable car may receive power beamed from the asteroid's solar panels, or may have an onboard nuclear generator.</li>
+   <li>Once at its full length, the nuclear shuttle will only need to use 1/5th of the delta V needed to reach and return from lunar orbit to reach the platform of the tether foot and return. It will need that same 1/5th of the normal delta V to go anywhere on the Moon by grappling the platform and hanging off it until it is over its destination, and to return to base the same way.</li>
+   <li>Conversion of the asteroid to a space station begins. Early steps in that direction were carried out during tether construction, replacing payloads of asteroid material with simple vessels and beams made of fused regolith. The solar panels and engines of the retrieval ship are installed on the asteroid for use in orbital maintenance.</li>
+   <li>The upper tether, extending outwards deeper into space, is also installed and given its own cable car and platform at the tip. This will proceed much faster as the dynamics of the system and good designs are now known.</li>
+   <li>With this process completed, it takes about 2 km/s less delta V to get something to the Moon from Earth, or vice versa.</li>
+   <li>The mining of ice from the poles now is used to fuel the cargo ship on the Earth/Moon run completely.</li>
+  </ul>
+<p>A second asteroid retrieval mission is sent out from Earth to get the anchor mass for the equatorial tether complex. Target mass: 15 kilotons.</p>
+<p>Cargo runs between LEO and the polar tether occur at every opportunity, every 2 weeks, 26 per year.</p>
+ </article>
+ <article class="column">
+  <h5><a href="colonies.html#PearyModels">Completion of the Peary First Hab</a></h5>
+  <ul>
+   <li>The simple boards, beams, panels and such that the MIP stations can produce are sufficient for the bulk of this hab, without needing cables or fiber reinforcement. They can also be used to produce simple furnishings (tables, shelves, doors, chairs, beds ...) and simple implements (jugs, cups, bowls, boxes, shovels, rakes...) </li>
+   <li>Everything else must be brought from Earth - the roof membrane, all the machinery and internal systems.</li>
+   <li>Once the hab has been pressurized and all the systems successfully tested, the first permanent crew arrives - 30 people. They all have an initial commitment of 2 years after which they may be rotated out for someone else, but the staff will remain 30 people and ramp up as further installations come online.</li>
+   <li>This crew concentrates on the development of industrial and farming capacity. They are able to accomplish a great deal quickly, because the teleoperation of the robotic equipment continues to be done from Earth, which they augment now with onsite remote operation of such equipment. Being onsite to handle problems, modify and upgrade equipment, and invent new processes, they are able to make the robotic equipment extremely productive. The robots become able to execute complex processes almost independently, and begin to produce many of the components needed to make more robots.</li>
+   <li>Once they complete the first greenhouse, stabilize ice harvesting at a suitable level,   complete the first solar thermal power plant, add a second, much larger hab, and meet a set of test goals demonstrating that it is safe to expand the population, the Residence Program begins</li>
+  </ul>
+ </article>
+ <article class="column">
+  <h5>The Residence Program Begins</h5>
+  <p>This is actually the final step of this phase, happening after everything in the other columns is done. However, preparation has been happening for years.</p>
+  <ul>
+   <li>The 2nd Peary hab houses the first 200 astronauts of the program. Each was selected by their countries to go to the Moon permanently - to live out the rest of their lives there. For this privilege, these nations pay $150 million per astronaut. All astronauts must meet stiff criteria agreed upon by all the nations.
+   <ul>
+    <li>They must be scientists and engineers who can play an active role in studying and developing the Moon </li>
+    <li>They must participate regularly in programming broadcast back to Earth, both by appearing on camera, and by coming up with content for such programming. There are many options - arts, sports, educational content, conversational content, games.</li>
+    <li>They must donate their bodies to science upon death.</li>
+    </ul>
+    </li>
+   <li>Nations may send a number of representatives, but at the same time, there is a deliberate effort to send a group that truly represents all the races, religions, language groups, and ways of life of humanity.</li>
+  </ul>
+   <p>There will be several further rounds of this program. The second one goes partly to Peary, and partly to Lalande. The cost of a space in each round costs progressively less, and there are progressively more spaces available. By the time the program ends, the cost of going has fallen enough to be in reach of a member of the general public, and the population of the Moon has increased enough to provide a stable society capable of receiving and integrating them. </p>
+  <p>Cost for a residential spot when the Moon opens to the public: $250,000. Population when the opening occurs: 15,000 </p>
  </article>
 </div>
