--- a/learn.html
+++ b/learn.html
@@ -39,11 +39,12 @@ of the Moon."
 				</p>
 				<script src="js/suborbital.js"></script>
 				<script>
-					setTimeout(function(){subDraw()},2000)
+setTimeout(function(){subDraw()},2000)
 				</script>
 				<!--geogebra applet-->
-					<script type="text/javascript" src="https://www.geogebra.org/scripts/deployggb.js"></script>
-					<div style="width:500px;height:355px;display:block" id="applet_container1"></div>
+				<script type="text/javascript" src="https://www.geogebra.org/scripts/deployggb.js"></script>
+				<div id="applet_container1">
+				</div>
 				<!--end geogebra applet-->
 			</div>
 		</div><!--end outer div-->
@@ -104,23 +105,21 @@ of the Moon."
 <section id="lessons">
 	<div class="outerDiv">
 		<div class="innerDiv wide">
-		<h2>A quick introduction to orbital mechanics</h2>
-		<script type="text/javascript">
-		var applet1 = new GGBApplet({filename: "GeoGebra/suborbital.ggb","showtoolbar":false}, true);
-		var applet2 = new GGBApplet({filename: "GeoGebra/orbit.ggb","showtoolbar":false}, true);
-		window.onload = function(){
-			applet1.inject('applet_container1', 'preferHTML5');
-			applet2.inject('applet_container2', 'preferHTML5');
-		}
-		</script>
-		<div style="width:500px;height:500px; align-self: center; padding: 10px;
-		margin-bottom: 20px;"
-		id="applet_container2">
-			Applet not loading? <a href="img/orbit.png">Here is an image instead</a>
-		</div>
-				<h5>
-					The following terms are important when describing an orbit:
-				</h5>
+			<h2>A quick introduction to orbital mechanics</h2>
+			<script type="text/javascript">
+var applet1 = new GGBApplet({filename: "GeoGebra/suborbital.ggb","showtoolbar":false}, true);
+var applet2 = new GGBApplet({filename: "GeoGebra/orbit.ggb","showtoolbar":false}, true);
+window.onload = function(){
+	applet1.inject('applet_container1', 'preferHTML5');
+	applet2.inject('applet_container2', 'preferHTML5');
+}
+			</script>
+			<div id="applet_container2">
+				Applet not loading? <a href="img/orbit.png">Here is an image instead</a>
+			</div>
+			<h5>
+				The following terms are important when describing an orbit:
+			</h5>
 				<ul>
 					<li><b>Periapsis:</b> The point where the orbiting craft is <i>closest</i> to the object it orbits.</li>
 					<li><b>Apoapsis:</b> The point where the orbiting craft is <i>farthest</i> from the object it orbits.</li>
