--- a/learn.html
+++ b/learn.html
@@ -33,18 +33,31 @@ of the Moon."
 		<div class="outerDiv">
 			<div class="innerDiv">
 				<h2>The Rocket Equation</h2>
-				<p style="padding-bottom: 5px;margin-bottom: 0;">Mass ratio:</p>
-				<input type="text" title="Start mass divided by end mass" placeholder="Start mass divided by end mass" value="" id="massratioRE">
-				<p style="padding-bottom: 5px;margin-bottom: 0;">Exhaust velocity: (m/s)</p>
-				<input type="text" placeholder="Velocity of the rocket exhaust" value="" id="exhaustvelocityRE">
+				<p class="frameBuffer">Mass ratio:</p>
+				<input
+					type="text"
+					title="Start mass divided by end mass"
+					placeholder="Start mass divided by end mass"
+					value=""
+					id="massratioRE">
+				<p class="frameBuffer">Exhaust velocity: (m/s)</p>
+				<input
+					type="text"
+					placeholder="Velocity of the rocket exhaust"
+					value=""
+					id="exhaustvelocityRE">
 				<p>
 					<input type="checkbox" id="ispcheckboxRE"> use I<sub>sp</sub> instead
 				</p>
 				<button onclick="rocket()">Calculate!</button><br>
-				<script src="js/rocketEquation.js"></script>
 				<p id="resultRE">&nbsp;</p>
 				<p id="moreThan"></p>
 				<p id="lessThan"></p>
+			</div>
+		</div>
+		<div class="outerDiv">
+			<div class="innerDiv">
+				<h2>Rotovators</h2>
 				<div class="imgResize">
 					<a href="rotovator.html">
 						<img src="img/RotovatorCanvasLink.png">
@@ -59,120 +72,107 @@ of the Moon."
 	<div class="outerDiv">
 		<div class="innerDiv wide">
 			<h2>A quick introduction to orbital mechanics</h2>
-			<script type="text/javascript">
-				var applet1 = new GGBApplet(
-					{
-						filename:"GeoGebra/suborbital.ggb",
-						"showtoolbar":false
-					},true
-				);
-				var applet2 = new GGBApplet(
-					{
-						filename:"GeoGebra/orbit.ggb",
-						"showtoolbar":false
-					},true
-				);
-				window.onload = function(){
-					applet1.inject('applet_container1','preferHTML5');
-					applet2.inject('applet_container2','preferHTML5');
-				}
-			</script>
+			<p>
+				Orbital motion? That is just what happens when gravity is the only force that applies. In space, which mostly consists of space, things are seldom touching each other. As gravity is the only way objects then interact, orbital mechanics becomes the tool of choice to analyse what is going on.
+			</p>
+			<!--Geogebra applet-->
 			<div id="applet_container2">
 				Applet not loading? <a href="img/orbit.png">Here is an image instead</a>
 			</div>
+			<!--end Geogebra applet-->
 			<h5>
 				The following terms are important when describing an orbit:
 			</h5>
-				<ul>
-					<li><b>Periapsis:</b> The point where the orbiting craft is <i>closest</i> to the object it orbits.</li>
-					<li><b>Apoapsis:</b> The point where the orbiting craft is <i>farthest</i> from the object it orbits.</li>
-					<li><b>Semi-major axis:</b> The largest central radius of an ellipse. This is half the distance between the periapsis and apoapsis. Often shortened to $a$.</li>
-				</ul>
-				<br>
-				<h5>Let us then get started with the math!</h5>
-				<p>
-					We have a spacecraft orbiting in a circular orbit. What is its velocity?
-						$$v=\sqrt{\frac{\mu}{r}}$$
-					$v$ is of course the velocity. $\mu$ is the gravitational parameter. You would often see that as $GM$, which is the same
-					thing. That is the mass of the object you are orbiting ($M$) multiplied with the gravitational constant ($G=6.674 \cdot 10^{-11} \frac{m^3}{kg s^2}$).
-				</p>
-				<p>To save you some time:</p>
-				<ul>
-					<li>$\mu _{Earth}=3.98600441 \cdot 10^{14} \frac{m^3}{s^2}$</li>
-					<li>$\mu _{Moon}=4.9048695 \cdot 10^{12} \frac{m^3}{s^2}$</li>
-					<li>$\mu _{Sun}=1.32712440018 \cdot 10^{20} \frac{m^3}{s^2}$</li>
-				</ul>
-				<p>
-					Using that information, we can calculate things like the orbital velocity in low Earth orbit:
-					$\sqrt{\frac{\mu _{Earth}}{r_{LEO}}}=\sqrt{\frac{3.986 \cdot 10^{14} \frac{m^3}{s^2}}{6600000m}}=7771 \frac{m}{s}$
-				</p>
-				<p>
-					But wait a minute, not all orbits are circles! How can be calculate the orbital velocity in an elliptical orbit? Well,
-					first of all, the velocity varies depending on where in the orbit you are, having a larger velocity at the periapsis than
-					at the apoapsis. But there is an equation here to:
-						$$v=\sqrt{\mu \left(\frac{2}{r}-\frac{1}{a}\right)}$$
-					$r$ is here your current distance to the centre of the object you are orbiting, and $a$ is the semi-major axis that we just
-					talked about. Notice that in the case of a circular orbit, $r=a$ so this equation simplifies back to $v=\sqrt{\frac{\mu}{r}}$
-				</p>
-				<h5>Example usage:</h5>
-				<p>
-					We can already start to put the things we have learned together. Take a look at the figure below. Imagine you are
-					orbiting in the blue orbit, and want to change to the red orbit:
-				</p>
-				<img src="img/transfer.png">
-				<p>
-					What do you do? Well, take a look at the point where the orbits touch each other. Why are we in the blue orbit there,
-					and not in the red one? After all, you can be in that location if you where in the red orbit too. Not everything is
-					the same. What matters here is that you would have a different velocity, depending on which of the orbits you are in.
-					Let us calculate that. We say $\mu = 1$ for simplicity:
-						$$v_{blue}=\sqrt{\frac{1}{1}}=1$$
-						$$v_{red}=\sqrt{1\left(\frac{2}{1}-\frac{1}{2}\right)}=1.225$$
-					Below is an illustration of the velocity vectors. The pink part is the $\Delta v$ we have to spend. Note that the difference is smallest when the vectors point in the same direction.
-				</p>
-				<img src="img/difference.png">
-				<h5>More math!</h5>
-				<p>
-					Let us take another look at the equation for velocity in an elliptical orbit:
-						$$v=\sqrt{\mu \left(\frac{2}{r}-\frac{1}{a}\right)}$$
-					What happens if we tries to travel "to infinity"? We start at distance $r$, and travels to $a=\infty$:
-						$$v=\sqrt{\mu \left(\frac{2}{r}-\frac{1}{\infty}\right)}$$
-					That simplifies to
-						$$v=\sqrt{\mu \left(\frac{2}{r}-0\right)}$$
-					and that is equal to
-						$$v_e=\sqrt{\frac{2\mu}{r}}$$
-					"$v_e$" is here short for "escape velocity". It turns out that travelling as far away as you would like has a limited cost.
-					Of course, reaching infinity takes an ehm... infinite time... From this point, when I say infinity, I mean sufficiently far away.
-				</p>
-				<p>
-					You can also notice that the escape velocity at a given distance is $\sqrt{2}$ times larger than the orbital velocity of a circular orbit. $v_e = \sqrt{2}v_c$.
-				</p>
-				<h5>Beyond infinity</h5>
-				<p>
-					You have now seen 3 of the 4 different shapes an orbit can have, circular, elliptical and parabolic.
-					The parabolic orbit is the one where we reach infinity.
-					The remaining orbit is the one shaped like a hyperbola. This one also reach infinity, like the parabola, but with a mayor difference:
-					In a parabolic orbit, we only "just reach infinity", that is, we are slowed down all the time by gravity, and the velocity is approaching zero as we get farther away.
-					That is not always what we want. For instance, if we only "just escape Earth", our relative velocity to it is zero, and that means we have the same orbit around the Sun as Earth!
-					In many cases, we want to have some extra velocity once we have escaped, for example for heading towards Mars, Jupiter, or for escaping the solar system entirely.
-					An example closer to home is when we escape the Moon for a return trip. We do not want to end up in the same orbit as the Moon, instead, we want to head back home.
-				</p>
-				<p>
-					How can we achieve that? The answer is naturally to get a velocity higher than the escape velocity. But how exactly does that relate to the final velocity we end up with once we have escaped?
-					Behold. The Pythagoras formula of orbital mechanics:
-				</p>
-				<img class="realsize" src="img/orbitalPythagoras.png" width="415" height="257" alt="v² = v_escape² + v_infinity²">
-				<p>
-					Example: Say we are in an orbit again around a mass with a $\mu$ of 1. Our distance is also 1. The escape velocity at this distance is then $\sqrt{2}$. Say then that we have an actual velocity larger than that, for instance $v=2$. In that case, we are going to escape. However, we are still going to be slowed down by gravity, so our final velocity when we have travelled far away is going to be lower than 2 for sure.
-						$$v^2 = v_{\infty}^2 + v_{e}^2$$
-					We have some of the numbers to plug in to this equation.
-						$$2^2 = v_{\infty}^2 + \sqrt{2}^2$$
-					We can rearrange that to get:
-						$$v_{\infty}^2 = 2^2 - \sqrt{2}^2$$
-					And then get our velocity "at infinity":
-						$$v_{\infty}=\sqrt{2}$$
-				</p>
-			</div>
+			<ul>
+				<li><b>Periapsis:</b> The point where the orbiting craft is <i>closest</i> to the object it orbits.</li>
+				<li><b>Apoapsis:</b> The point where the orbiting craft is <i>farthest</i> from the object it orbits.</li>
+				<li><b>Semi-major axis:</b> The largest central radius of an ellipse. This is half the distance between the periapsis and apoapsis. Often shortened to $a$.</li>
+			</ul>
+			<br>
+			<h5>Let us then get started with the math!</h5>
+			<p>
+				We have a spacecraft orbiting in a circular orbit. What is its velocity?
+					$$v=\sqrt{\frac{\mu}{r}}$$
+				$v$ is of course the velocity. $\mu$ is the gravitational parameter. You would often see that as $GM$, which is the same
+				thing. That is the mass of the object you are orbiting ($M$) multiplied with the gravitational constant ($G=6.674 \cdot 10^{-11} \frac{m^3}{kg s^2}$).
+			</p>
+			<p>To save you some time:</p>
+			<ul>
+				<li>$\mu _{Earth}=3.98600441 \cdot 10^{14} \frac{m^3}{s^2}$</li>
+				<li>$\mu _{Moon}=4.9048695 \cdot 10^{12} \frac{m^3}{s^2}$</li>
+				<li>$\mu _{Sun}=1.32712440018 \cdot 10^{20} \frac{m^3}{s^2}$</li>
+			</ul>
+			<p>
+				Using that information, we can calculate things like the orbital velocity in low Earth orbit:
+				$\sqrt{\frac{\mu _{Earth}}{r_{LEO}}}=\sqrt{\frac{3.986 \cdot 10^{14} \frac{m^3}{s^2}}{6600000m}}=7771 \frac{m}{s}$
+			</p>
+			<p>
+				But wait a minute, not all orbits are circles! How can be calculate the orbital velocity in an elliptical orbit? Well,
+				first of all, the velocity varies depending on where in the orbit you are, having a larger velocity at the periapsis than
+				at the apoapsis. But there is an equation here to:
+					$$v=\sqrt{\mu \left(\frac{2}{r}-\frac{1}{a}\right)}$$
+				$r$ is here your current distance to the centre of the object you are orbiting, and $a$ is the semi-major axis that we just
+				talked about. Notice that in the case of a circular orbit, $r=a$ so this equation simplifies back to $v=\sqrt{\frac{\mu}{r}}$
+			</p>
+			<h5>Example usage:</h5>
+			<p>
+				We can already start to put the things we have learned together. Take a look at the figure below. Imagine you are
+				orbiting in the blue orbit, and want to change to the red orbit:
+			</p>
+			<img src="img/transfer.png">
+			<p>
+				What do you do? Well, take a look at the point where the orbits touch each other. Why are we in the blue orbit there,
+				and not in the red one? After all, you can be in that location if you where in the red orbit too. Not everything is
+				the same. What matters here is that you would have a different velocity, depending on which of the orbits you are in.
+				Let us calculate that. We say $\mu = 1$ for simplicity:
+					$$v_{blue}=\sqrt{\frac{1}{1}}=1$$
+					$$v_{red}=\sqrt{1\left(\frac{2}{1}-\frac{1}{2}\right)}=1.225$$
+				Below is an illustration of the velocity vectors. The pink part is the $\Delta v$ we have to spend. Note that the difference is smallest when the vectors point in the same direction.
+			</p>
+			<img src="img/difference.png">
+			<h5>More math!</h5>
+			<p>
+				Let us take another look at the equation for velocity in an elliptical orbit:
+					$$v=\sqrt{\mu \left(\frac{2}{r}-\frac{1}{a}\right)}$$
+				What happens if we tries to travel "to infinity"? We start at distance $r$, and travels to $a=\infty$:
+					$$v=\sqrt{\mu \left(\frac{2}{r}-\frac{1}{\infty}\right)}$$
+				That simplifies to
+					$$v=\sqrt{\mu \left(\frac{2}{r}-0\right)}$$
+				and that is equal to
+					$$v_e=\sqrt{\frac{2\mu}{r}}$$
+				"$v_e$" is here short for "escape velocity". It turns out that travelling as far away as you would like has a limited cost.
+				Of course, reaching infinity takes an ehm... infinite time... From this point, when I say infinity, I mean sufficiently far away.
+			</p>
+			<p>
+				You can also notice that the escape velocity at a given distance is $\sqrt{2}$ times larger than the orbital velocity of a circular orbit. $v_e = \sqrt{2}v_c$.
+			</p>
+			<h5>Beyond infinity</h5>
+			<p>
+				You have now seen 3 of the 4 different shapes an orbit can have, circular, elliptical and parabolic.
+				The parabolic orbit is the one where we reach infinity.
+				The remaining orbit is the one shaped like a hyperbola. This one also reach infinity, like the parabola, but with a mayor difference:
+				In a parabolic orbit, we only "just reach infinity", that is, we are slowed down all the time by gravity, and the velocity is approaching zero as we get farther away.
+				That is not always what we want. For instance, if we only "just escape Earth", our relative velocity to it is zero, and that means we have the same orbit around the Sun as Earth!
+				In many cases, we want to have some extra velocity once we have escaped, for example for heading towards Mars, Jupiter, or for escaping the solar system entirely.
+				An example closer to home is when we escape the Moon for a return trip. We do not want to end up in the same orbit as the Moon, instead, we want to head back home.
+			</p>
+			<p>
+				How can we achieve that? The answer is naturally to get a velocity higher than the escape velocity. But how exactly does that relate to the final velocity we end up with once we have escaped?
+				Behold. The Pythagoras formula of orbital mechanics:
+			</p>
+			<img class="realsize" src="img/orbitalPythagoras.png" width="415" height="257" alt="v² = v_escape² + v_infinity²">
+			<p>
+				Example: Say we are in an orbit again around a mass with a $\mu$ of 1. Our distance is also 1. The escape velocity at this distance is then $\sqrt{2}$. Say then that we have an actual velocity larger than that, for instance $v=2$. In that case, we are going to escape. However, we are still going to be slowed down by gravity, so our final velocity when we have travelled far away is going to be lower than 2 for sure.
+					$$v^2 = v_{\infty}^2 + v_{e}^2$$
+				We have some of the numbers to plug in to this equation.
+					$$2^2 = v_{\infty}^2 + \sqrt{2}^2$$
+				We can rearrange that to get:
+					$$v_{\infty}^2 = 2^2 - \sqrt{2}^2$$
+				And then get our velocity "at infinity":
+					$$v_{\infty}=\sqrt{2}$$
+			</p>
 		</div>
+	</div>
 	<div class="outerDiv">
 {%include spaceJStable.html%}
 		<div class="innerDiv">
@@ -183,3 +183,21 @@ of the Moon."
 	</div>
 </section>
 </div><!--end container-->
+<script type="text/javascript">
+var applet1 = new GGBApplet(
+	{
+		filename:"GeoGebra/suborbital.ggb",
+		"showtoolbar":false
+	},true
+);
+var applet2 = new GGBApplet(
+	{
+		filename:"GeoGebra/orbit.ggb",
+		"showtoolbar":false
+	},true
+);
+window.onload = function(){
+	applet1.inject('applet_container1','preferHTML5');
+	applet2.inject('applet_container2','preferHTML5');
+}
+</script>
